--- a/package.json
+++ b/package.json
@@ -1,18 +1,77 @@
 {
   "name": "agenda-trip-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.12",
-    "expo-status-bar": "~3.0.8",
+    "@expo/metro-runtime": "6.1.2",
+    "@react-native-firebase/app": "23.4.0",
+    "@react-native-firebase/auth": "23.4.0",
+    "@react-navigation/elements": "2.6.4",
+    "@react-navigation/native": "7.1.17",
+    "@react-navigation/stack": "7.4.8",
+    "@vpriem/express-api-key-auth": "1.3.0",
+    "axios": "^1.12.2",
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "expo": "^54.0.12",
+    "expo-blur": "15.0.7",
+    "expo-build-properties": "1.0.9",
+    "expo-clipboard": "8.0.7",
+    "expo-constants": "18.0.9",
+    "expo-dev-client": "6.0.12",
+    "expo-device": "8.0.8",
+    "expo-image-picker": "17.0.8",
+    "expo-linear-gradient": "15.0.7",
+    "expo-linking": "8.0.8",
+    "expo-modules-core": "3.0.18",
+    "expo-notifications": "0.32.11",
+    "expo-print": "15.0.7",
+    "expo-router": "6.0.8",
+    "expo-sharing": "14.0.7",
+    "expo-status-bar": "3.0.8",
+    "express": "4.21.1",
+    "firebase": "11.0.0",
+    "firebase-admin": "12.7.0",
+    "lottie-react-native": "7.3.1",
+    "mongoose": "8.9.0",
+    "punycode": "2.3.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.0",
+    "react-native-calendars": "1.1310.0",
+    "react-native-countdown-circle-timer": "3.2.1",
+    "react-native-dotenv": "3.4.11",
+    "react-native-draggable-flatlist": "4.0.1",
+    "react-native-draglist": "3.6.2",
+    "react-native-element-dropdown": "2.12.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "2.28.0",
+    "react-native-get-random-values": "1.11.0",
+    "react-native-html-to-pdf": "0.12.0",
+    "react-native-linear-gradient": "2.8.3",
+    "react-native-pager-view": "6.9.1",
+    "react-native-paper": "5.12.5",
+    "react-native-paper-dates": "0.22.27",
+    "react-native-reanimated": "4.1.1",
+    "react-native-reanimated-carousel": "3.5.1",
+    "react-native-safe-area-context": "5.6.0",
+    "react-native-screens": "4.16.0",
+    "react-native-splash-screen": "3.3.0",
+    "react-native-svg": "15.12.1",
+    "react-native-vector-icons": "10.1.0",
+    "react-native-web": "0.21.0",
+    "react-native-worklets": "0.5.1",
+    "uuid": "10.0.0"
+  },
+  "devDependencies": {
+    "@react-native-community/cli": "20.0.2"
   },
   "private": true
 }
