--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "expo-linking": "8.0.8",
     "expo-modules-core": "3.0.18",
     "expo-notifications": "0.32.11",
-    "expo-print": "15.0.7",
+    "expo-print": "~15.0.7",
     "expo-router": "6.0.8",
     "expo-sharing": "14.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "3.0.8",
     "express": "4.21.1",
     "firebase": "11.0.0",
@@ -51,10 +52,8 @@
     "react-native-draggable-flatlist": "4.0.1",
     "react-native-draglist": "3.6.2",
     "react-native-element-dropdown": "2.12.4",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.28.0",
     "react-native-get-random-values": "1.11.0",
-    "react-native-html-to-pdf": "0.12.0",
     "react-native-linear-gradient": "2.8.3",
     "react-native-pager-view": "6.9.1",
     "react-native-paper": "5.12.5",
@@ -63,7 +62,6 @@
     "react-native-reanimated-carousel": "3.5.1",
     "react-native-safe-area-context": "5.6.0",
     "react-native-screens": "4.16.0",
-    "react-native-splash-screen": "3.3.0",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "10.1.0",
     "react-native-web": "0.21.0",
