--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "3.0.8",
     "express": "4.21.1",
-    "firebase": "11.0.0",
+    "firebase": "^11.0.0",
     "firebase-admin": "12.7.0",
     "lottie-react-native": "7.3.1",
     "mongoose": "8.9.0",
@@ -56,7 +56,7 @@
     "react-native-get-random-values": "1.11.0",
     "react-native-linear-gradient": "2.8.3",
     "react-native-pager-view": "6.9.1",
-    "react-native-paper": "5.12.5",
+    "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "0.22.27",
     "react-native-reanimated": "4.1.1",
     "react-native-reanimated-carousel": "3.5.1",
